# OOP

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/actions/cppcheck/: action.yml
.github/workflows/: build.yml  cmake.yml
